--- a/.github/workflows/create-gh-repo.yml
+++ b/.github/workflows/create-gh-repo.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - name: 'Create new repo'
       run: |
-        repoOutput=$(curl -X POST https://api.github.com/orgs/${{ vars.GH_USER }}/repos \
+        repoOutput=$(curl -X POST 'https://api.github.com/orgs/${{ vars.GH_USER }}/repos' \
         -H "Accept: application/vnd.github+json" \
         -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}"\
         -H "X-GitHub-Api-Version: 2022-11-28" \
@@ -27,7 +27,7 @@ jobs:
         echo "::set-env name=newRepoApiUrl::$newRepoApiUrl"
     - name: 'Import template repo'
       run: |
-        importOutput=$(curl -X PUT $newRepoApiUrl/import \
+        importOutput=$(curl -X PUT '$newRepoApiUrl/import' \
         -H "Accept: application/vnd.github+json" \
         -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}"\
         -H "X-GitHub-Api-Version: 2022-11-28" \
