Testing trigger,create-gh-repo actions

--- a/.github/workflows/create-gh-repo.yml
+++ b/.github/workflows/create-gh-repo.yml
@@ -25,6 +25,7 @@ jobs:
         -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
         -H "X-GitHub-Api-Version: 2022-11-28" \
         -d '{"name":"${{ inputs.repoName }}","private":true}')
+        echo $repoOutput
         newRepoApiUrl=$(echo $repoOutput | jq '.url' -r )
         if [ -z "$newRepoApiUrl" ]; then exit 2 ; fi 
         echo "::set-env name=newRepoApiUrl::$newRepoApiUrl"
