Testing trigger,create-gh-repo actions

--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -38,6 +38,5 @@ jobs:
     with:
       repoName: ${{ inputs.lzName }}
       templateRepoUrl:  ${{ inputs.templateRepoUrl }}
-    # secrets:
-    #   ${{}}
+    secrets: inherit
 
