--- a/.github/workflows/create-gh-repo.yml
+++ b/.github/workflows/create-gh-repo.yml
@@ -25,13 +25,12 @@ jobs:
         -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
         -H "X-GitHub-Api-Version: 2022-11-28" \
         -d '{"name":"${{ inputs.repoName }}","private":true}')
-        echo $repoOutput
         newRepoApiUrl=$(echo $repoOutput | jq '.url' -r )
         if [ -z "$newRepoApiUrl" ]; then exit 2 ; fi 
-        echo "::set-env name=newRepoApiUrl::$newRepoApiUrl"
+        echo "newRepoApiUrl==$newRepoApiUrl" >> $GITHUB_ENV
     - name: 'Import template repo'
       run: |
-        importOutput=$(curl -X PUT '$newRepoApiUrl/import \
+        importOutput=$(curl -X PUT '${{ env.newRepoApiUrl }}/import' \
         -H "Accept: application/vnd.github+json" \
         -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
         -H "X-GitHub-Api-Version: 2022-11-28" \
