--- a/.github/workflows/create-gh-repo.yml
+++ b/.github/workflows/create-gh-repo.yml
@@ -35,6 +35,6 @@ jobs:
         -H "Accept: application/vnd.github+json" \
         -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
         -H "X-GitHub-Api-Version: 2022-11-28" \
-        -d '{"vcs":"subversion","vcs_url":"${{ inputs.templateRepoUrl }}","vcs_username":"${{ vars.GH_USER }}","vcs_password":"${{ secrets.GH_TOKEN  }}"}')
+        -d '{"vcs":"git","vcs_url":"${{ inputs.templateRepoUrl }}","vcs_username":"${{ vars.GH_USER }}","vcs_password":"${{ secrets.GH_TOKEN  }}"}')
         importStatus=$(echo $importOutput | jq '.status' -r )
         if [ -z "$importStatus" ]; then exit 2 ; fi 
