--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -21,7 +21,7 @@ on:
 
 
 jobs:
-  validate_inputs:
+  validate-inputs:
     runs-on: ubuntu-latest
     steps:
     - name: 'Output inputs received'
@@ -32,7 +32,21 @@ jobs:
         echo "${{ inputs.tags }}"
     - name: 'Define runtime variables'
       run: |
-        echo 'I'm defining any runtime variables needed to be gathered from the inputs
+        echo Im defining any runtime variables needed to be gathered from the inputs'
+    - name: 'Test if ${{ inputs.lzName }} exists'
+      run: |
+        repoTestOutput=$(curl \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer $pat"\
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/${{ env.GH_ORG }}/${{ inputs.lzName }})
+        repoExists=$( echo $repoTestOutput | jq '.id' -r ) 
+        if [ "$repoExists" ]; then 
+          echo "repo_exists"="true" >> $GITHUB_ENV
+          repoMessage=$( echo $repoTestOutput | jq '.message' -r );
+        elif [ "repoMessage"]; then 
+          echo "repo_exists"="false" >> $GITHUB_ENV
+        fi 
   call-workflow-create-gh-repo:
     uses: ./.github/workflows/create-gh-repo.yml
     with:
