--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -37,15 +37,14 @@ jobs:
       run: |
         repoTestOutput=$(curl \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer $pat"\
+          -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/${{ env.GH_ORG }}/${{ inputs.lzName }})
-        repoExists=$( echo $repoTestOutput | jq '.id' -r ) 
-        if [ "$repoExists" ]; then 
-          echo "repo_exists"="true" >> $GITHUB_ENV
-          repoMessage=$( echo $repoTestOutput | jq '.message' -r );
-        elif [ "repoMessage"]; then 
-          echo "repo_exists"="false" >> $GITHUB_ENV
+        repoExists=$( echo $repoTestOutput | jq '.id' -r )
+        if [ "$repoExists" != 'null' ]; then 
+          repo_exists="true"
+        else
+          repo_exists="false"
         fi 
   call-workflow-create-gh-repo:
     uses: ./.github/workflows/create-gh-repo.yml
