--- a/.github/workflows/create-gh-repo.yml
+++ b/.github/workflows/create-gh-repo.yml
@@ -28,10 +28,10 @@ jobs:
         newRepoApiUrl=$(echo $repoOutput | jq '.url' -r )
         if [ -z "$newRepoApiUrl" ]; then exit 2 ; fi 
         echo $newRepoApiUrl
-        echo "new_repo_api_url=$newRepoApiUrl" >> $GITHUB_ENV
+        echo "NEW_REPO_API_URL=$newRepoApiUrl" >> $GITHUB_ENV
     - name: 'Import template repo'
       run: |
-        importOutput=$(curl -X PUT '${{ env.new_repo_api_url }}/import' \
+        importOutput=$(curl -X PUT '${{ env.NEW_REPO_API_URL }}/import' \
         -H "Accept: application/vnd.github+json" \
         -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
         -H "X-GitHub-Api-Version: 2022-11-28" \
