--- a/.github/workflows/create-gh-repo.yml
+++ b/.github/workflows/create-gh-repo.yml
@@ -2,11 +2,11 @@ name: 'Create GitHub Repo'
 on: 
   workflow_call:
     inputs:
-      repoName:
+      REPO_NAME:
         description: 'Defines the repo name'
         required: true
         type: string
-      templateRepoUrl:
+      TEMPLATE_REPO_URL:
         description: 'Defines the repo to use as a template to copy the code into'
         required: true
         type: string
@@ -24,7 +24,7 @@ jobs:
         -H "Accept: application/vnd.github+json" \
         -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
         -H "X-GitHub-Api-Version: 2022-11-28" \
-        -d '{"name":"${{ inputs.repoName }}","private":true}')
+        -d '{"name":"${{ inputs.REPO_NAME }}","private":true}')
         newRepoApiUrl=$(echo $repoOutput | jq '.url' -r )
         if [ -z "$newRepoApiUrl" ]; then exit 2 ; fi 
         echo $newRepoApiUrl
@@ -35,6 +35,6 @@ jobs:
         -H "Accept: application/vnd.github+json" \
         -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
         -H "X-GitHub-Api-Version: 2022-11-28" \
-        -d '{"vcs":"git","vcs_url":"${{ inputs.templateRepoUrl }}","vcs_username":"${{ vars.GH_USER }}","vcs_password":"${{ secrets.GH_TOKEN  }}"}')
+        -d '{"vcs":"git","vcs_url":"${{ inputs.TEMPLATE_REPO_URL }}","vcs_username":"${{ vars.GH_USER }}","vcs_password":"${{ secrets.GH_TOKEN  }}"}')
         importStatus=$(echo $importOutput | jq '.status' -r )
         if [ -z "$importStatus" ]; then exit 2 ; fi 
