--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -59,6 +59,6 @@ jobs:
     with:
       WORKSPACE_NAME: ${{ inputs.LANDING_ZONE_NAME }}
       ORG_NAME:  ${{ vars.TFC_ORG }}
-      TFC_REPO: ${{ call-workflow-create-gh-repo.outputs.NEW_REPO_FULL_NAME }}
+      TFC_REPO: ${{ needs.call-workflow-create-gh-repo.outputs.NEW_REPO_FULL_NAME }}
     secrets: inherit
 
