Updated to test initializing TFC workspace

--- a/.github/workflows/initiate-tfc-workspace.yml
+++ b/.github/workflows/initiate-tfc-workspace.yml
@@ -22,8 +22,8 @@ jobs:
     - name: 'Define runtime variables'
       run: |
         echo 'Im defining any runtime variables needed to be gathered from the inputs'
-        mkdir $env:GITHUB_ACTION_PATH/temp
-        echo "REPO_TEMP_PATH=$env:GITHUB_ACTION_PATH/temp" >> $GITHUB_ENV
+        mkdir ${{ GITHUB_ACTION_PATH }}/temp
+        echo "REPO_TEMP_PATH=${{ GITHUB_ACTION_PATH }}/temp" >> $GITHUB_ENV
     - uses: actions/checkout@v3
       with:
         repository: ${{ inputs.TFC_REPO }}
