--- a/.github/workflows/update-tfc-provider-file.yml
+++ b/.github/workflows/update-tfc-provider-file.yml
@@ -27,6 +27,7 @@ jobs:
       run: |
         mkdir ${{ github.workspace }}/temp
         echo "REPO_TEMP_PATH=${{ github.workspace }}/temp" >> $GITHUB_ENV
+#  Need to add step to validate the import is successful
     - name: 'Checkout ${{ inputs.TFC_REPO }} that contains the Terraform workspace code'
       uses: actions/checkout@v3
       with:
@@ -34,17 +35,21 @@ jobs:
         path: ${{ env.REPO_TEMP_PATH }}
         token: ${{ secrets.GH_TOKEN }}
         ref: ${{ inputs.TFC_REPO_BRANCH }}
-    - name: 'Authenticate to Terraform Cloud and create workspace'
+    - name: 'Update provider.tf to use the correct TFC org and workspace name'
+      uses: cschleiden/replace-tokens@v1
+      with:
+        tokenPrefix: '___'
+        tokenSuffix: '___'
+        files: '${{ env.REPO_TEMP_PATH }}/provider.tf'
+      env:
+        ORG_NAME: ${{ inputs.ORG_NAME }}
+        WORKSPACE_NAME: ${{ inputs.WORKSPACE_NAME }}
+    # - uses: actions/checkout@v3
+    - name: 'Commit and push changes made to provider.tf file to the repo: ${{ inputs.TFC_REPO }}'
       run: |
-        export TF_TOKEN_app_terraform_io=${{ secrets.TFC_TOKEN }}
-        cd ${{ env.REPO_TEMP_PATH }}
-        terraform init
-    - name: 'Run terraform plan'
-      run: |
-        cd ${{ env.REPO_TEMP_PATH }}
-        terraform plan
-
-
-# Next steps:
-# 2. Define variables for within the TFC workspace
-# 3. Run the Infra workspace to deploy the infra
+          cd ${{ env.REPO_TEMP_PATH }}
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "Updated Org and Workspace name for Terraform Cloud"
+          git push       
