--- a/.github/workflows/initiate-tfc-workspace.yml
+++ b/.github/workflows/initiate-tfc-workspace.yml
@@ -61,7 +61,7 @@ jobs:
         value: ${{ secrets.ARM_SUBSCRIPTION_ID }}
     - name: 'Get ID of newly created TFC workspace'
       run: |
-        workspaces=$( curl -X GET 'https://app.terraform.io/api/v2/organizations/${{ inputs.ORG_NAME}}/workspaces \
+        workspaces=$( curl -X GET 'https://app.terraform.io/api/v2/organizations/${{ inputs.ORG_NAME}}/workspaces' \
         --header "Authorization: Bearer ${{ secrets.TFC_TOKEN }}" \
         --header "Content-Type: application/vnd.api+json" )
         workspaceId=$( echo $workspaces | jq '.data[] | select ( .attributes.name == "${{ inputs.WORKSPACE_NAME }}" ) | .id ' -r )
@@ -70,7 +70,7 @@ jobs:
     - name: 'Assign variable set to workspace to authenticate with Hyper scaler'
       run: |
         # Determine ID of existing variable set used to authenticate with Hyper scaler
-        variableSets=$( curl -X GET 'https://app.terraform.io/api/v2/organizations/${{ inputs.ORG_NAME}}/varsets \
+        variableSets=$( curl -X GET 'https://app.terraform.io/api/v2/organizations/${{ inputs.ORG_NAME}}/varsets' \
         --header "Authorization: Bearer ${{ secrets.TFC_TOKEN }}" \
         --header "Content-Type: application/vnd.api+json" )
         varSetId=$( echo $variableSets | jq '.data[] | select ( .attributes.name == "${{ env.TFC_AZURE_VAR_SET_NAME }}" ) | .id ' -r )
