Updating and test steps to initiatite TFC workspaces

--- a/.github/workflows/initiate-tfc-workspace.yml
+++ b/.github/workflows/initiate-tfc-workspace.yml
@@ -78,13 +78,13 @@ jobs:
         echo "varSetId is $varSetId"
         if [ -z "$varSetId" ]; then exit 2 ; fi
         # Assign variable set to workspace
-        applyOutput=$( curl -X POST 'https://app.terraform.io/api/v2/varset/$varSetId/relationships/workspaces' \
+        applyOutput=$( curl -X POST 'https://app.terraform.io/api/v2/varset/'$varSetId'/relationships/workspaces' \
         --header "Authorization: Bearer ${{ secrets.TFC_TOKEN }}" \
         --header "Content-Type: application/vnd.api+json" \
         --data-raw '{"data": [{"type": "workspaces", "id": "${{ env.WORKSPACE_ID }}"}]}' )
         echo "applyOutput is $applyOutput"
         if [ -n "$applyOutput" ]; then
-          applyErrors=$( echo $applyOutput | jq '.errors[].details' -r ) 
+          applyErrors=$( echo $applyOutput | jq '.errors[]' -r ) 
           echo $applyErrors 
           exit 2 ; 
         fi
