--- a/.github/workflows/initiate-tfc-workspace.yml
+++ b/.github/workflows/initiate-tfc-workspace.yml
@@ -79,8 +79,10 @@ jobs:
         echo "varSetId is $varSetId"
         if [ -z "$varSetId" ]; then exit 2 ; fi
         # Assign variable set to workspace
-        # updateVarSetUrl='https://app.terraform.io/api/v2/varset/$varSetId/relationships/workspaces'
-        applyOutput=$( curl -X POST https://app.terraform.io/api/v2/varset/$varSetId/relationships/workspaces \
+        updateVarSetUrl='https://app.terraform.io/api/v2/varset/'$varSetId'/relationships/workspaces'
+        updateVarSetUrl2="https://app.terraform.io/api/v2/varset/"$varSetId"/relationships/workspaces"
+        updateVarSetUrl2=https://app.terraform.io/api/v2/varset/${varSetId}/relationships/workspaces
+        applyOutput=$( curl -X POST "https://app.terraform.io/api/v2/varset/"$varSetId"/relationships/workspaces" \
         --header "Authorization: Bearer ${{ secrets.TFC_TOKEN }}" \
         --header "Content-Type: application/vnd.api+json" \
         --data-raw '{"data": [{"type": "workspaces", "id": "${{ env.WORKSPACE_ID }}"}]}' )
